--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
-    goals: 'package'
+    goals: 'clean package'
     options: '-Dmaven.test.skip=true'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.11'
